--- a/src/Pivot/Pivot.scss
+++ b/src/Pivot/Pivot.scss
@@ -1,5 +1,6 @@
 @import "node_modules/azure-devops-ui/Core/_platformCommon.scss";
 
-.sample-form-section {
-    margin-top: 20px;
+.sample-pivot {
+    font-size: $fontSizeM;
+    margin: 0 25px;
 }
